fixed wrap in projects

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -153,6 +153,11 @@ main {
     }
     .project {
         flex-direction: column;
+        width: 300px;
+    }
+    .projects-container {
+        flex-direction: row;
+        flex-wrap: wrap;
     }
     .right {
         padding: 0px;
@@ -166,5 +171,8 @@ main {
     .project img {
         width: 100%;
         height: 100%;
+    }
+    .project div {
+        width: 300px;
     }
 }
